force-app/main/default/objects/Quote/fields/Annual_Total__c.field-meta.xml
<CustomField>
    <fullName>Annual_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Calculated by automation based on QuoteLineItem data with Software Subscriptions Product Family</description>
    <inlineHelpText>This field is automatically populated by system flows</inlineHelpText>
    <label>Annual Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>