force-app/main/default/objects/Quote/fields/Auto_Create_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Auto_Create_Line_Items__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trigger flag for flow to create quote line items from opportunity products</description>
    <label>Auto-Create Line Items from Opportunity</label>
    <type>Checkbox</type>
</CustomField>