force-app/main/default/objects/Quote/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Billing Contact)</relationshipLabel>
    <relationshipName>Quotes3</relationshipName>
    <type>Lookup</type>
</CustomField>