force-app/main/default/objects/Quote/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <formula>TEXT(CurrencyIsoCode)</formula>
    <label>Currency</label>
    <type>Text</type>
</CustomField>