force-app/main/default/objects/Quote/fields/Customer_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Legal_Name__c</fullName>
    <label>Customer Legal Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>