force-app/main/default/objects/Quote/fields/Customer_Legal_Notice_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Legal_Notice_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Legal Notice Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Customer Legal Notice Contact)</relationshipLabel>
    <relationshipName>Quotes2</relationshipName>
    <type>Lookup</type>
</CustomField>