force-app/main/default/objects/Quote/fields/DPA_Required__c.field-meta.xml
<CustomField>
    <fullName>DPA_Required__c</fullName>
    <label>DPA Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>