force-app/main/default/objects/Quote/fields/Exchange_Rate_at_Creation__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate_at_Creation__c</fullName>
    <description>Frozen exchange rate when quote was created to maintain currency consistency</description>
    <label>Exchange Rate at Creation</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>