force-app/main/default/objects/Quote/fields/First_Approval_Override__c.field-meta.xml
<CustomField>
    <fullName>First_Approval_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrative override for first approval step. When checked, bypasses Joel Hutter VP Sales approval requirement.</description>
    <label>1st Approval Override</label>
    <type>Checkbox</type>
</CustomField>