force-app/main/default/objects/Quote/fields/Master_Terms__c.field-meta.xml
<CustomField>
    <fullName>Master_Terms__c</fullName>
    <label>Master Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MSA | SLA executed on the effective date set out therein</fullName>
            </value>
            <value>
                <fullName>Website Terms effective as of the Start Date below</fullName>
            </value>
            <value>
                <fullName>Other executed on the effective date set out therein</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>