force-app/main/default/objects/Quote/fields/One_Off_Charges__c.field-meta.xml
<CustomField>
    <fullName>One_Off_Charges__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Calculated by automation based on QuoteLineItem data with non-subscription Product Family</description>
    <inlineHelpText>This field is automatically populated by system flows</inlineHelpText>
    <label>One-Off Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>