force-app/main/default/objects/Quote/fields/Order_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_End_Date__c</fullName>
    <description>Order end date for service delivery and billing calculations</description>
    <label>Order End Date</label>
    <type>Date</type>
</CustomField>