force-app/main/default/objects/Quote/fields/Order_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Start_Date__c</fullName>
    <description>Order start date for service delivery and billing calculations</description>
    <label>Order Start Date</label>
    <type>Date</type>
</CustomField>