force-app/main/default/objects/Quote/fields/Order_Term__c.field-meta.xml
<CustomField>
    <fullName>Order_Term__c</fullName>
    <formula>TEXT(DAY(Order_Start_Date__c))+&apos; &apos;+Contract_Start_Month__c+&apos; &apos;+TEXT(YEAR(Order_Start_Date__c))+
            &apos; to &apos;+
            TEXT(DAY(Order_End_Date__c))+&apos; &apos;+Contract_End_Month__c+&apos; &apos;+TEXT(YEAR(Order_End_Date__c))</formula>
    <label>Order Term</label>
    <type>Text</type>
</CustomField>