force-app/main/default/objects/Quote/fields/Payment_Terms_Customer_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Customer_Contacts__c</fullName>
    <defaultValue>&quot;As per Appendix 1&quot;</defaultValue>
    <label>Payment Terms &amp; Customer Contacts</label>
    <type>TextArea</type>
</CustomField>