force-app/main/default/objects/Quote/fields/PO_Required_by_Customer__c.field-meta.xml
<CustomField>
    <fullName>PO_Required_by_Customer__c</fullName>
    <label>PO Required by Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>