force-app/main/default/objects/Quote/fields/POC_Status__c.field-meta.xml
<CustomField>
    <fullName>POC_Status__c</fullName>
    <label>POC Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>POC_Status</valueSetName>
    </valueSet>
</CustomField>