force-app/main/default/objects/Quote/fields/Primary_Customer_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer_Contact_Email__c</fullName>
    <formula>Primary_Customer_Contact__r.Email</formula>
    <label>Primary Customer Contact Email</label>
    <type>Text</type>
</CustomField>