force-app/main/default/objects/Quote/fields/Professional_Services__c.field-meta.xml
<CustomField>
    <fullName>Professional_Services__c</fullName>
    <label>Professional Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>