force-app/main/default/objects/Quote/fields/QLI_Clearing_Complete__c.field-meta.xml
<CustomField>
    <fullName>QLI_Clearing_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Internal flag to track whether auto-created QuoteLineItems have been cleared for this Quote. Prevents the clearing flow from running multiple times.</description>
    <label>QLI Clearing Complete</label>
    <type>Checkbox</type>
</CustomField>