force-app/main/default/objects/Quote/fields/Second_Approval_Override__c.field-meta.xml
<CustomField>
    <fullName>Second_Approval_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrative override for second approval step. When checked, bypasses Legal/Operations team approval requirement.</description>
    <label>2nd Approval Override</label>
    <type>Checkbox</type>
</CustomField>