force-app/main/default/objects/Quote/fields/Seqera_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Seqera_Contact_Email__c</fullName>
    <label>Seqera Contact Email</label>
    <type>Email</type>
</CustomField>