force-app/main/default/objects/Quote/fields/Synced_Quote__c.field-meta.xml
<CustomField>
    <fullName>Synced_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this Quote is currently synced to the Opportunity. Only one Quote per Opportunity should have this set to true.</description>
    <label>Synced Quote</label>
    <type>Checkbox</type>
</CustomField>