force-app/main/default/objects/Quote/fields/Term_Length_Months__c.field-meta.xml
<CustomField>
    <fullName>Term_Length_Months__c</fullName>
    <description>Whole months term length calculated from Quote Order dates</description>
    <label>Term Length (Months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>