force-app/main/default/objects/Quote/fields/Total_Payment_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Payment_Due__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Calculated by automation based on sum of all QuoteLineItem TotalPrice values</description>
    <inlineHelpText>This field is automatically populated by system flows</inlineHelpText>
    <label>Total Payment Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>