force-app/main/default/objects/Quote/fields/VAT_Number_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>VAT_Number_if_applicable__c</fullName>
    <label>VAT Number (if applicable)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>